# sylvia

./: Main.hs  README.mkd  Setup.hs  main.glade  sylvia.cabal
Sylvia/: Model.hs  Parser.hs
Sylvia/Model/: Exp.hs
Sylvia/Render/: Backend.hs  Core.hs  Pair.hs
Sylvia/Render/Backend/: Cairo.hs
Sylvia/Renderer/: Cairo.hs  Core.hs  Impl.hs  Pair.hs  Rhyme.hs
Sylvia/Renderer/Impl/: Cairo.hs
Sylvia/Text/: Parser.hs  PrettyPrint.hs
Sylvia/UI/: GTK.hs
tests/: Properties.hs
